@@ -13,7 +13,7 @@
   <properties>
     <exposed.version>0.55.0</exposed.version>
     <flyway.version>10.11.0</flyway.version>
-    <jda.version>5.1.1</jda.version>
+    <jda.version>5.2.0</jda.version>
     <jda-ktx.version>0.11.0-beta.19</jda-ktx.version>
     <koin.version>4.0.0</koin.version>
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
@@ -568,6 +568,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.3.1</version>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
